Remove test phase from EmailBuilder

--- a/docs/de-de/modules/ROOT/nav.adoc
+++ b/docs/de-de/modules/ROOT/nav.adoc
@@ -105,7 +105,7 @@
 ** xref:crm:schnellsuche.adoc[Schnellsuche]
 ** xref:crm:firmen.adoc[Firmen]
 ** xref:crm:messenger-testphase.adoc[Messenger (Testphase)]
-** xref:crm:emailbuilder-testphase.adoc[EmailBuilder (Testphase)]
+** xref:crm:emailbuilder-testphase.adoc[EmailBuilder]
 ** xref:crm:e-mails-versenden.adoc[E-Mails]
 ** xref:crm:op-liste.adoc[Offene Posten]
 ** xref:crm:ticketsystem-nutzen.adoc[Ticketsystem]
