--- a/docs/de-de/modules/crm/pages/praxisbeispiel-tracking-url-senden.adoc
+++ b/docs/de-de/modules/crm/pages/praxisbeispiel-tracking-url-senden.adoc
@@ -47,7 +47,7 @@ Erstelle nun eine E-Mail-Vorlage, die die Variable für die Tracking-URL enthäl
 [.instruction]
 E-Mail-Vorlage mit dem EmailBuilder erstellen:
 
-. Öffne das Menü *CRM » EmailBuilder (Testphase)*.
+. Öffne das Menü *CRM » EmailBuilder*.
 . Klicke in der Zeile des Ordners, in dem du eine Vorlage erstellen möchtest, auf material:more_vert[]. +
 → Ein Fenster wird geöffnet.
 . Klicke auf material:add[] *Neue Vorlage*.
