--- a/docs/en-gb/modules/ROOT/nav.adoc
+++ b/docs/en-gb/modules/ROOT/nav.adoc
@@ -103,7 +103,7 @@
 ** xref:crm:quick-search.adoc[Quick search]
 ** xref:crm:companies.adoc[Companies]
 ** xref:crm:messenger-testphase.adoc[Messenger (Test phase)]
-** xref:crm:emailbuilder-testphase.adoc[EmailBuilder (Test phase)]
+** xref:crm:emailbuilder-testphase.adoc[EmailBuilder]
 ** xref:crm:sending-emails.adoc[Emails]
 ** xref:crm:ar-list.adoc[Accounts receivable]
 ** xref:crm:using-the-ticket-system.adoc[Ticket system]
