--- a/docs/en-gb/modules/crm/pages/emailbuilder.adoc
+++ b/docs/en-gb/modules/crm/pages/emailbuilder.adoc
@@ -1,11 +1,11 @@
-= EmailBuilder (Test phase)
+= EmailBuilder
 :keywords: EmailBuilder, Email Builder, email templates, widgets, e-mail templates, document attachment email, attach documents email, construction kit emails, email variables, twig expressions, email despatch, code widget
 :description: Learn how to use the EmailBuilder in plentymarkets.
 :page-aliases: emailbuilder-testphase.adoc
 :id: MYFLVYO
 :author: team-crm
 
-All emails that are sent with plentymarkets to your xref:crm:contacts.adoc#[contacts] are based on templates. You create and manage templates with the EmailBuilder in the *CRM » EmailBuilder (Test phase)* menu. 
+All emails that are sent with plentymarkets to your xref:crm:contacts.adoc#[contacts] are based on templates. You create and manage templates with the EmailBuilder in the *CRM » EmailBuilder* menu. 
 
 [TIP]
 .Email templates are sent in multipart format
@@ -164,12 +164,12 @@ In the *Email accounts* assistant in the *Setup » Assistants » Basic setup* me
 [#email-automatic-despatch]
 === Setting up the automatic despatch:
 
-The *Automatic despatch* step of the *Email accounts* assistant contains various events that you can link with a template. You can find the assistant in the *Setup » Assistants » Basic setup* menu. Select from the drop-down list the template that you <<#create-template, created>> before in the *CRM » EmailBuilder (Test phase)* menu. This ensures that the email template is sent to your contacts once the event occurs.
+The *Automatic despatch* step of the *Email accounts* assistant contains various events that you can link with a template. You can find the assistant in the *Setup » Assistants » Basic setup* menu. Select from the drop-down list the template that you <<#create-template, created>> before in the *CRM » EmailBuilder* menu. This ensures that the email template is sent to your contacts once the event occurs.
 
 [IMPORTANT]
 .Removing the link before deleting the email template
 ====
-Deleting an email template that is linked with an event in the *Automatic despatch* step of the *Email accounts* assistant may lead to undesired effects. Therefore, first go to *Setup » Assistants » Basic setup* » *Email accounts* assistant and remove the link in the *Automatic despatch* step by selecting the option *Do not send* from the drop-down list in the line of the event. Afterwards, <<#delete-template, delete>> the template in the *CRM » EmailBuilder (Test phase)* menu.
+Deleting an email template that is linked with an event in the *Automatic despatch* step of the *Email accounts* assistant may lead to undesired effects. Therefore, first go to *Setup » Assistants » Basic setup* » *Email accounts* assistant and remove the link in the *Automatic despatch* step by selecting the option *Do not send* from the drop-down list in the line of the event. Afterwards, <<#delete-template, delete>> the template in the *CRM » EmailBuilder* menu.
 ====
 
 [.collapseBox]
@@ -262,7 +262,7 @@ Create folders to get a better overview of your email templates at a later point
 [.instruction]
 Creating a folder:
 
-. Go to *CRM » EmailBuilder (Test phase)*.
+. Go to *CRM » EmailBuilder*.
 . In the bottom left corner, click on material:add[] *Add* material:play_arrow[].
 . Click on material:folder[] *Folder*. +
 → The *Create new folder* window opens.
@@ -281,7 +281,7 @@ You can update the folder name at any time. To do so, proceed as described below
 [.instruction]
 Renaming the folder:
 
-. Go to *CRM » EmailBuilder (Test phase)*.
+. Go to *CRM » EmailBuilder*.
 . In the line of the folder that you want to rename, click on material:more_vert[]. +
 → A new window opens.
 . Click on material:edit[] *Rename*. +
@@ -298,7 +298,7 @@ You can move the folder to another position at any time. To do so, proceed as de
 [.instruction]
 Moving a folder:
 
-. Go to *CRM » EmailBuilder (Test phase)*.
+. Go to *CRM » EmailBuilder*.
 . In the line of the folder that you want to move, click on material:more_vert[]. +
 → A new window opens.
 . Click on material:move_down[] *Move*. +
@@ -321,7 +321,7 @@ We recommend creating a draft in advance to avoid confusing and unclear nesting 
 [.instruction]
 Creating a sub-folder:
 
-. Go to *CRM » EmailBuilder (Test phase)*.
+. Go to *CRM » EmailBuilder*.
 . In the line of the folder that you want to create a sub-folder for, click on material:more_vert[]. +
 → A new window opens.
 . Click on material:add[] *Add*.
@@ -341,7 +341,7 @@ You can delete folders and sub-folders at any time. Note that the entire content
 [.instruction]
 Deleting a folder:
 
-. Go to *CRM » EmailBuilder (Test phase)*.
+. Go to *CRM » EmailBuilder*.
 . In the line of the folder or sub-folder that you want to delete, click on material:more_vert[]. +
 → A new window opens.
 . Click on material:delete[] *Delete*. +
@@ -379,7 +379,7 @@ Proceed as described below to create a template for the header of your email tem
 [.instruction]
 Creating a header template:
 
-. Go to *CRM » EmailBuilder (Test phase)*.
+. Go to *CRM » EmailBuilder*.
 . In the line of the folder or sub-folder in which you want to create a header, click on material:more_vert[]. +
 → A new window opens.
 . Click on material:add[] *Add*.
@@ -405,7 +405,7 @@ Creating a header template:
 
 Check the header by opening the preview.
 
-. Go to *CRM » EmailBuilder (Test phase)*.
+. Go to *CRM » EmailBuilder*.
 . Expand the folder (material:chevron_right[]) that contains the header for which you want to show the preview.
 . Click on the header.
 . Click on *Preview* (material:preview[]).
@@ -424,7 +424,7 @@ Proceed as described below to create a template for the footer of your email tem
 [.instruction]
 Creating a footer template:
 
-. Go to *CRM » EmailBuilder (Test phase)*.
+. Go to *CRM » EmailBuilder*.
 In the line of the folder or sub-folder in which you want to create a footer, click on material:more_vert[]. +
 → A new window opens.
 . Click on material:add[] *Add*.
@@ -450,7 +450,7 @@ In the line of the folder or sub-folder in which you want to create a footer, cl
 
 Check the footer by opening the preview.
 
-. Go to *CRM » EmailBuilder (Test phase)*.
+. Go to *CRM » EmailBuilder*.
 . Expand the folder (material:chevron_right[]) that contains the footer for which you want to show the preview.
 . Click on the footer.
 . Click on *Preview* (material:preview[]).
@@ -487,7 +487,7 @@ image::crm:emailbuilder-new-template.png[width=640, height=360]
 [.instruction]
 Creating a template:
 
-. Go to *CRM » EmailBuilder (Test phase)*.
+. Go to *CRM » EmailBuilder*.
 . In the line of the folder or sub-folder in which you want to create a template, click on material:more_vert[]. +
 → A new window opens.
 . Click on material:add[] *Add*.
@@ -496,7 +496,7 @@ Creating a template:
 . Carry out the settings. Note <<#table-emailbuilder-create-template>> and <<#image-emailbuilder-template>>.
 . *Save* (material:save[]) the settings.
 
-*_Note:_* If you do not want to create the template within a folder, click on the start page of the *CRM » EmailBuilder (Test phase)* menu in the bottom left on material:add[] *Add* material:play_arrow[]and select material:description[] *Template* afterwards. The template will then be created on the first level and does not belong to a folder.
+*_Note:_* If you do not want to create the template within a folder, click on the start page of the *CRM » EmailBuilder* menu in the bottom left on material:add[] *Add* material:play_arrow[]and select material:description[] *Template* afterwards. The template will then be created on the first level and does not belong to a folder.
 
 [TIP]
 .Email templates are sent in multipart format
@@ -708,7 +708,7 @@ Proceed as described below to insert one or multiple widgets into your template.
 [.instruction]
 Inserting a widget into a template:
 
-. Go to *CRM » EmailBuilder (Test phase)*.
+. Go to *CRM » EmailBuilder*.
 . Expand the folder (material:chevron_right[]) that contains the template you want to edit.
 . Click on the template.
 . Click on *Edit* (material:edit[]). +
@@ -802,7 +802,7 @@ Click on *Close settings* (material:close[]) to close the settings. Click on *De
 
 Check the widget by opening the preview.
 
-. Go to *CRM » EmailBuilder (Test phase)*.
+. Go to *CRM » EmailBuilder*.
 . Expand the folder (material:chevron_right[]) that contains the template for which you want to show the preview.
 . Click on the template.
 . Click on *Preview* (material:preview[]).
@@ -821,7 +821,7 @@ You can edit the content of the widgets at any time. To do so, proceed as descri
 [.instruction]
 Editing a widget:
 
-. Go to *CRM » EmailBuilder (Test phase)*.
+. Go to *CRM » EmailBuilder*.
 . Expand the folder (material:chevron_right[]) that contains the template you want to edit.
 . Click on the template.
 . Click on *Edit* (material:edit[]). +
@@ -868,7 +868,7 @@ image::crm:emailbuilder-example-default-template.png[width=640, height=360]
 [.instruction]
 Creating a default template:
 
-. Go to *CRM » EmailBuilder (Test phase)*.
+. Go to *CRM » EmailBuilder*.
 . In the line of the folder in which you want to create a default template, click on material:more_vert[]. +
 → A new window opens.
 . Click on material:add[] *Add*.
@@ -881,7 +881,7 @@ Creating a default template:
 → The template is created and opened. 
 
 [TIP]
-If you do not want to create the default template within a folder, click on the start page of the *CRM » EmailBuilder (Test phase)* menu in the bottom left on material:add[] *Add* material:play_arrow[] and select material:description[] *Template* afterwards. The template will then be created on the first level and does not belong to a folder.
+If you do not want to create the default template within a folder, click on the start page of the *CRM » EmailBuilder* menu in the bottom left on material:add[] *Add* material:play_arrow[] and select material:description[] *Template* afterwards. The template will then be created on the first level and does not belong to a folder.
 
 [#default-template-adjust-subject]
 ==== Adjusting the subject
@@ -1013,7 +1013,7 @@ This ensures that your emails can be read by all recipients, even if their email
 [.instruction]
 Showing the preview:
 
-. Go to *CRM » EmailBuilder (Test phase)*.
+. Go to *CRM » EmailBuilder*.
 . Expand the folder (material:chevron_right[]) that contains the template for which you want to show the preview.
 . Click on the template.
 . Click on *Preview* (material:preview[]).
@@ -1032,7 +1032,7 @@ In order to search for specific templates, enter a search term in the search fie
 [.instruction]
 Searching for a template:
 
-. Go to *CRM » EmailBuilder (Test phase)*.
+. Go to *CRM » EmailBuilder*.
 * *_Alternative 1:_* Enter a value in the search field and select the appropriate filter from the suggestion list. *_Example:_* If you enter a number, the possible filters with this ID will be suggested such as for example the template ID.
 * *_Alternative 2:_* Click on material:tune[] to narrow down the search results with filters.
 . Note the explanations about the filters in <<#table-search-template>>. +
@@ -1083,7 +1083,7 @@ You can move your templates to another folder at any time. To do so, proceed as 
 [.instruction]
 Moving a template:
 
-. Go to *CRM » EmailBuilder (Test phase)*.
+. Go to *CRM » EmailBuilder*.
 . Expand the folder (material:chevron_right[]) that contains the template you want to move.
 . In the line of the template, click on material:more_vert[]. +
 → A new window opens.
@@ -1115,7 +1115,7 @@ If you are in the editor or in the language settings of a template and want to s
 [.instruction]
 Editing a template:
 
-. Go to *CRM » EmailBuilder (Test phase)*.
+. Go to *CRM » EmailBuilder*.
 . Expand the folder (material:chevron_right[]) that contains the template you want to edit.
 . Click on the template.
 . Carry out the changes. Note <<#table-emailbuilder-create-template>>.
@@ -1174,7 +1174,7 @@ _Before copying the template_, carry out the settings in the <<#intable-general-
 [.instruction]
 Copying a template:
 
-. Go to *CRM » EmailBuilder (Test phase)*.
+. Go to *CRM » EmailBuilder*.
 . Expand the folder (material:chevron_right[]) that contains the template you want to copy.
 . In the line of the template that you want to copy, click on material:more_vert[]. +
 → A new window opens.
@@ -1196,7 +1196,7 @@ Proceed as described below to delete templates. Only the assembled template will
 [.instruction]
 Deleting a template:
 
-. Go to *CRM » EmailBuilder (Test phase)*.
+. Go to *CRM » EmailBuilder*.
 . Expand the folder (material:chevron_right[]) that contains the template you want to delete.
 . In the line of the template that you want to delete, click on material:more_vert[]. +
 → A new window opens.
@@ -1213,7 +1213,7 @@ Proceed as described below to remove a certain language from the template.
 [.instruction]
 Removing a language from the template:
 
-. Go to *CRM » EmailBuilder (Test phase)*.
+. Go to *CRM » EmailBuilder*.
 . Expand the folder (material:chevron_right[]) that contains the template from which you want to remove a language.
 . Click on the template.
 . In the template’s tabs at the top, select the language that you want to remove.
