--- a/docs/en-gb/modules/crm/pages/practical-example-migration-templates.adoc
+++ b/docs/en-gb/modules/crm/pages/practical-example-migration-templates.adoc
@@ -20,7 +20,7 @@ With the release of the new EmailBuilder version on 7th September2022 in all bet
 [#content-migrated-templates]
 === Checking the content of the migrated templates
 
-After the migration has been carried out also <<#box-migration-dates, in your system>>, it’s important that you check the content of the migrated templates in the *CRM » EmailBuilder (Test phase)* menu. To do so, open the preview of the corresponding templates (material:preview[]).
+After the migration has been carried out also <<#box-migration-dates, in your system>>, it’s important that you check the content of the migrated templates in the *CRM » EmailBuilder* menu. To do so, open the preview of the corresponding templates (material:preview[]).
 
 Especially when you created complex templates in the *Setup » Client » [Select client] » Email » Templates* menu that contain for example xref:crm:sending-emails.adoc#4100[template functions], it is important to check that the migration has correctly transferred all content to the EmailBuilder.
 
@@ -43,7 +43,7 @@ Depending on which automation option in plentymarkets you are using, check the f
 [#migrated-templates]
 == Where can I find the migrated templates?
 
-The migrated templates are available in the *CRM » EmailBuilder (Test phase)* menu in the main folder *Old templates* in the corresponding sub-folders.
+The migrated templates are available in the *CRM » EmailBuilder* menu in the main folder *Old templates* in the corresponding sub-folders.
 
 _Example_: After the migration, all templates that were created by the owner plentytest are available in the sub-folder *plentytest*. All other templates that do not belong to a certain owner (General email templates) are then available in the EmailBuilder’s *General* folder (see <<#image-migration-old-templates-folder>>).
 
