--- a/docs/en-gb/modules/crm/pages/practical-example-send-tracking-url.adoc
+++ b/docs/en-gb/modules/crm/pages/practical-example-send-tracking-url.adoc
@@ -47,7 +47,7 @@ Now create an email template that contains the variable for the tracking URL. Yo
 [.instruction]
 Creating an email template with the EmailBuilder:
 
-. Go to *CRM » EmailBuilder (Test phase)*.
+. Go to *CRM » EmailBuilder*.
 . In the line of the folder or sub-folder in which you want to create a template, click on material:more_vert[]. +
 → A window opens.
 . Click on material:add[] *New template*.
