--- a/docs/de-de/modules/crm/pages/emailbuilder.adoc
+++ b/docs/de-de/modules/crm/pages/emailbuilder.adoc
@@ -1,11 +1,11 @@
-= EmailBuilder (Testphase)
+= EmailBuilder
 :keywords: EmailBuilder, E-Mail Builder, E-Mail-Vorlagen, Widgets, Emailvorlagen, Dokumentenanhang E-Mail, Email-Vorlagen Baukasten, E-Mail-Variablen, twig expressions, E-Mail-Versand, Code-Widget
 :description: Erfahre, wie du den EmailBuilder in plentymarkets verwendest.
 :page-aliases: emailbuilder-testphase.adoc
 :id: MYFLVYO
 :author: team-crm
 
-Alle E-Mails, die du über plentymarkets an deine xref:crm:kontakte.adoc#[Kontakte] versendest, basieren auf Vorlagen. Vorlagen erstellst und verwaltest du mit dem EmailBuilder im Menü *CRM » EmailBuilder (Testphase)*. 
+Alle E-Mails, die du über plentymarkets an deine xref:crm:kontakte.adoc#[Kontakte] versendest, basieren auf Vorlagen. Vorlagen erstellst und verwaltest du mit dem EmailBuilder im Menü *CRM » EmailBuilder*. 
 
 [TIP]
 .E-Mail-Vorlagen werden im Multipart-Format versendet
@@ -166,12 +166,12 @@ Du kannst im Assistenten *E-Mail-Konten* im Menü *Einrichtung » Assistenten »
 [#e-mail-automatischer-versand]
 === Automatischen Versand einrichten
 
-Im Menü *Einrichtung » Assistenten » Grundeinrichtung* im Assistenten *E-Mail-Konten* im Schritt *Automatischer Versand* stehen dir verschiedene Ereignisse zur Verfügung, die du mit einer Vorlage verknüpfen kannst. Wähle aus der Dropdown-Liste die Vorlage, die du zuvor im Menü *CRM » EmailBuilder (Testphase)* <<#vorlage-erstellen, erstellt>> hast. Dadurch wird bei Eintritt des Ereignisses diese Vorlage automatisch an deine Kund:innen versendet.
+Im Menü *Einrichtung » Assistenten » Grundeinrichtung* im Assistenten *E-Mail-Konten* im Schritt *Automatischer Versand* stehen dir verschiedene Ereignisse zur Verfügung, die du mit einer Vorlage verknüpfen kannst. Wähle aus der Dropdown-Liste die Vorlage, die du zuvor im Menü *CRM » EmailBuilder* <<#vorlage-erstellen, erstellt>> hast. Dadurch wird bei Eintritt des Ereignisses diese Vorlage automatisch an deine Kund:innen versendet.
 
 [IMPORTANT]
 .Verknüpfung vor Löschen der E-Mail-Vorlage entfernen
 ====
-Das Löschen einer Vorlage, die mit einem Ereignis im Schritt *Automatischer Versand* im Assistenten *E-Mail-Konten* verknüpft ist, kann zu unerwünschten Effekten führen. Entferne daher zunächst die Verknüpfung im Menü *Einrichtung » Assistenten » Grundeinrichtung* » Assistent *E-Mail-Konten* » Schritt: *Automatischer Versand*, indem du in der Zeile des Ereignisses in der Dropdown-Liste die Option *Nicht senden* wählen. Anschließend <<#vorlage-loeschen, löschst>> du die Vorlage im Menü *CRM » EmailBuilder (Testphase)*.
+Das Löschen einer Vorlage, die mit einem Ereignis im Schritt *Automatischer Versand* im Assistenten *E-Mail-Konten* verknüpft ist, kann zu unerwünschten Effekten führen. Entferne daher zunächst die Verknüpfung im Menü *Einrichtung » Assistenten » Grundeinrichtung* » Assistent *E-Mail-Konten* » Schritt: *Automatischer Versand*, indem du in der Zeile des Ereignisses in der Dropdown-Liste die Option *Nicht senden* wählen. Anschließend <<#vorlage-loeschen, löschst>> du die Vorlage im Menü *CRM » EmailBuilder*.
 ====
 
 [.collapseBox]
@@ -264,7 +264,7 @@ Erstelle Ordner, um später eine bessere Übersicht über deine E-Mail-Vorlagen 
 [.instruction]
 Ordner erstellen:
 
-. Öffne das Menü *CRM » EmailBuilder (Testphase)*.
+. Öffne das Menü *CRM » EmailBuilder*.
 . Klicke unten links auf material:add[] *Hinzufügen* material:play_arrow[].
 . Klicke auf material:folder[] *Ordner*. +
 → Das Fenster *Neuen Ordner erstellen* öffnet sich.
@@ -283,7 +283,7 @@ Du kannst den Namen des Ordners jederzeit anpassen. Gehe dazu wie im Folgenden b
 [.instruction]
 Ordner umbenennen:
 
-. Öffne das Menü *CRM » EmailBuilder (Testphase)*.
+. Öffne das Menü *CRM » EmailBuilder*.
 . Klicke in der Zeile des Ordners, den du umbenennen möchtest, auf material:more_vert[]. +
 → Ein Fenster öffnet sich.
 . Klicke auf material:edit[] *Umbenennen*. +
@@ -300,7 +300,7 @@ Du kannst den Ordner jederzeit an eine andere Stelle verschieben. Gehe dazu wie 
 [.instruction]
 Ordner verschieben:
 
-. Öffne das Menü *CRM » EmailBuilder (Testphase)*.
+. Öffne das Menü *CRM » EmailBuilder*.
 . Klicke in der Zeile des Ordners, den du verschieben möchtest, auf material:more_vert[]. +
 → Ein Fenster öffnet sich.
 . Klicke auf material:move_down[] *Verschieben*. +
@@ -323,7 +323,7 @@ Wir empfehlen dir, im Vorfeld einen Entwurf zu erstellen, um unübersichtliche V
 [.instruction]
 Unterordner erstellen:
 
-. Öffne das Menü *CRM » EmailBuilder (Testphase)*.
+. Öffne das Menü *CRM » EmailBuilder*.
 . Klicke in der Zeile des Ordners, für den du einen Unterordner erstellen möchtest, auf material:more_vert[]. +
 → Ein Fenster öffnet sich.
 . Klicke auf material:add[] *Hinzufügen* material:play_arrow[].
@@ -343,7 +343,7 @@ Du kannst Ordner und Unterordner jederzeit löschen. Beachte, dass dabei alle In
 [.instruction]
 Ordner löschen:
 
-. Öffne das Menü *CRM » EmailBuilder (Testphase)*.
+. Öffne das Menü *CRM » EmailBuilder*.
 . Klicke in der Zeile des Ordners bzw. Unterordners, den du löschen möchtest, auf material:more_vert[]. +
 → Ein Fenster öffnet sich.
 . Klicke auf material:delete[] *Löschen*. +
@@ -381,7 +381,7 @@ Gehe wie im Folgenden beschrieben vor, um eine Vorlage für den Header deiner E-
 [.instruction]
 Vorlage für den Header erstellen:
 
-. Öffne das Menü *CRM » EmailBuilder (Testphase)*.
+. Öffne das Menü *CRM » EmailBuilder*.
 . Klicke in der Zeile des Ordners bzw. Unterordners, in dem du einen Header erstellen möchtest, auf material:more_vert[]. +
 → Ein Fenster öffnet sich.
 . Klicke auf material:add[] *Hinzufügen* material:play_arrow[].
@@ -407,7 +407,7 @@ Vorlage für den Header erstellen:
 
 Prüfe den Header, indem du die Vorschau öffnest.
 
-. Öffne das Menü *CRM » EmailBuilder (Testphase)*.
+. Öffne das Menü *CRM » EmailBuilder*.
 . Klappe den Ordner auf (material:chevron_right[]), der den Header enthält, von dem du eine Vorschau anzeigen möchtest.
 . Klicke auf den Header.
 . Klicke auf *Vorschau* (material:preview[]).
@@ -426,7 +426,7 @@ Gehe wie im Folgenden beschrieben vor, um eine Vorlage für den Footer deiner E-
 [.instruction]
 Vorlage für den Footer erstellen:
 
-. Öffne das Menü *CRM » EmailBuilder (Testphase)*.
+. Öffne das Menü *CRM » EmailBuilder*.
 Klicke in der Zeile des Ordners bzw. Unterordners, in dem du einen Footer erstellen möchtest, auf material:more_vert[]. +
 → Ein Fenster öffnet sich.
 . Klicke auf material:add[] *Hinzufügen* material:play_arrow[].
@@ -452,7 +452,7 @@ Klicke in der Zeile des Ordners bzw. Unterordners, in dem du einen Footer erstel
 
 Prüfe den Footer, indem du die Vorschau öffnest.
 
-. Öffne das Menü *CRM » EmailBuilder (Testphase)*.
+. Öffne das Menü *CRM » EmailBuilder*.
 . Klappe den Ordner auf (material:chevron_right[]), der den Footer enthält, von dem du eine Vorschau anzeigen möchtest.
 . Klicke auf den Footer.
 . Klicke auf *Vorschau* (material:preview[]).
@@ -489,7 +489,7 @@ image::crm:emailbuilder-neue-vorlage.png[width=640, height=360]
 [.instruction]
 Vorlage erstellen:
 
-. Öffne das Menü *CRM » EmailBuilder (Testphase)*.
+. Öffne das Menü *CRM » EmailBuilder*.
 . Klicke in der Zeile des Ordners, in dem du eine Vorlage erstellen möchtest, auf material:more_vert[]. +
 → Ein Fenster öffnet sich.
 . Klicke auf material:add[] *Hinzufügen* material:play_arrow[].
@@ -498,7 +498,7 @@ Vorlage erstellen:
 . Nimm die Einstellungen vor. Beachte dazu die Erläuterungen in <<#table-emailbuilder-create-template>> und <<#image-emailbuilder-template>>.
 . *Speichere* (material:save[]) die Einstellungen.
 
-*_Hinweis:_* Wenn du die Vorlage nicht innerhalb eines Ordners erstellen möchtest, klicke auf der Startseite des Menüs *CRM » EmailBuilder (Testphase)* direkt unten links auf material:add[] *Hinzufügen* material:play_arrow[] und klicke dann auf material:description[] *Vorlage*. Die Vorlage wird dann auf der ersten Ebene erstellt, ohne dass sie zu einem Ordner gehört.
+*_Hinweis:_* Wenn du die Vorlage nicht innerhalb eines Ordners erstellen möchtest, klicke auf der Startseite des Menüs *CRM » EmailBuilder* direkt unten links auf material:add[] *Hinzufügen* material:play_arrow[] und klicke dann auf material:description[] *Vorlage*. Die Vorlage wird dann auf der ersten Ebene erstellt, ohne dass sie zu einem Ordner gehört.
 
 [TIP]
 .E-Mail-Vorlagen werden im Multipart-Format versendet
@@ -713,7 +713,7 @@ Gehe nun wie im Folgenden beschrieben vor, um ein Widget oder mehrere Widgets in
 [.instruction]
 Widget in Vorlage einfügen:
 
-. Öffne das Menü *CRM » EmailBuilder (Testphase)*.
+. Öffne das Menü *CRM » EmailBuilder*.
 . Klappe den Ordner auf (material:chevron_right[]), der die Vorlage enthält, die du bearbeiten möchtest.
 . Klicke auf die Vorlage.
 . Klicke auf *Bearbeiten* (material:edit[]). +
@@ -810,7 +810,7 @@ Klicke auf *Einstellungen schließen* (material:close[]), um die Einstellungen z
 
 Prüfe das Widget, indem du die Vorschau öffnest.
 
-. Öffne das Menü *CRM » EmailBuilder (Testphase)*.
+. Öffne das Menü *CRM » EmailBuilder*.
 . Klappe den Ordner auf (material:chevron_right[]), der die Vorlage enthält, von der du eine Vorschau anzeigen möchtest.
 . Klicke auf die Vorlage.
 . Klicke auf *Vorschau* (material:preview[]).
@@ -829,7 +829,7 @@ Du kannst die Inhalte der Widgets jederzeit bearbeiten. Gehe dazu wie im Folgend
 [.instruction]
 Widget bearbeiten:
 
-. Öffne das Menü *CRM » EmailBuilder (Testphase)*.
+. Öffne das Menü *CRM » EmailBuilder*.
 . Klappe den Ordner auf (material:chevron_right[]), der die Vorlage enthält, die du bearbeiten möchtest.
 . Klicke auf die Vorlage.
 . Klicke auf *Bearbeiten* (material:edit[]). +
@@ -876,7 +876,7 @@ image::crm:emailbuilder-beispiel-standardvorlage.png[width=640, height=360]
 [.instruction]
 Standardvorlage erstellen:
 
-. Öffne das Menü *CRM » EmailBuilder (Testphase)*.
+. Öffne das Menü *CRM » EmailBuilder*.
 . Klicke in der Zeile des Ordners, in dem du eine Standardvorlage erstellen möchtest, auf material:more_vert[]. +
 → Ein Fenster öffnet sich.
 . Klicke auf material:add[] *Hinzufügen* material:play_arrow[].
@@ -889,7 +889,7 @@ Standardvorlage erstellen:
 → Die Vorlage wird erstellt und geöffnet. 
 
 [TIP]
-Wenn du die Standardvorlage nicht innerhalb eines Ordners erstellen möchtest, klicke auf der Startseite des Menüs *CRM » EmailBuilder (Testphase)* direkt unten links auf material:add[] *Hinzufügen* material:play_arrow[] und klicke dann auf material:description[] *Vorlage*. Die Vorlage wird dann auf der ersten Ebene erstellt, ohne dass sie zu einem Ordner gehört.
+Wenn du die Standardvorlage nicht innerhalb eines Ordners erstellen möchtest, klicke auf der Startseite des Menüs *CRM » EmailBuilder* direkt unten links auf material:add[] *Hinzufügen* material:play_arrow[] und klicke dann auf material:description[] *Vorlage*. Die Vorlage wird dann auf der ersten Ebene erstellt, ohne dass sie zu einem Ordner gehört.
 
 [#standardvorlage-betreff-aendern]
 ==== Betreff ändern
@@ -1021,7 +1021,7 @@ So sind deine E-Mails für alle Empfänger:innen lesbar, auch wenn deren E-Mail-
 [.instruction]
 Vorschau anzeigen:
 
-. Öffne das Menü *CRM » EmailBuilder (Testphase)*.
+. Öffne das Menü *CRM » EmailBuilder*.
 . Klappe den Ordner auf (material:chevron_right[]), der die Vorlage enthält, von der du eine Vorschau anzeigen möchtest.
 . Klicke auf die Vorlage.
 . Klicke auf *Vorschau* (material:preview[]).
@@ -1040,7 +1040,7 @@ Um eine bestimmte Vorlage zu suchen, gibst du die dir bekannten Suchbegriffe in 
 [.instruction]
 Vorlage suchen:
 
-. Öffne das Menü *CRM » EmailBuilder (Testphase)*.
+. Öffne das Menü *CRM » EmailBuilder*.
 * *_Möglichkeit 1:_* Gib einen Wert im Suchfeld ein und wähle dann den für dich passenden Filter aus der Vorschlagsliste. *_Beispiel:_* Wenn du eine Zahl eingibst, werden dir mögliche Filter mit dieser ID vorgeschlagen wie z.B. die Vorlagen-ID.
 * *_Möglichkeit 2:_* Klicke auf material:tune[], um die Suchergebnisse mit Hilfe von Filtern einzugrenzen.
 . Beachte die Erläuterungen zu den Filtern in <<#table-search-template>>. +
@@ -1091,7 +1091,7 @@ Du kannst deine Vorlagen jederzeit in einen anderen Ordner verschieben. Gehe daz
 [.instruction]
 Vorlage verschieben:
 
-. Öffne das Menü *CRM » EmailBuilder (Testphase)*.
+. Öffne das Menü *CRM » EmailBuilder*.
 . Klappe den Ordner auf (material:chevron_right[]), der die Vorlage enthält, die du verschieben möchtest.
 . Klicke in der Zeile der Vorlage auf material:more_vert[]. +
 → Ein Fenster öffnet sich.
@@ -1123,7 +1123,7 @@ Wenn du im Editor oder in den Spracheinstellungen einer Vorlage bist und in eine
 [.instruction]
 Vorlage bearbeiten:
 
-. Öffne das Menü *CRM » EmailBuilder (Testphase)*.
+. Öffne das Menü *CRM » EmailBuilder*.
 . Klappe den Ordner auf (material:chevron_right[]), der die Vorlage enthält, die du bearbeiten möchtest.
 . Klicke auf die Vorlage.
 . Nimm die Änderungen vor. Beachte dazu auch die Erläuterungen in <<#table-emailbuilder-create-template>>.
@@ -1182,7 +1182,7 @@ Nimm _vor dem Kopieren_ der Vorlage auch die Einstellungen im Bereich <<#intable
 [.instruction]
 Vorlage kopieren:
 
-. Öffne das Menü *CRM » EmailBuilder (Testphase)*.
+. Öffne das Menü *CRM » EmailBuilder*.
 . Klappe den Ordner auf (material:chevron_right[]), der die Vorlage enthält, die du kopieren möchtest.
 . Klicke in der Zeile der Vorlage, die du kopieren möchtest, auf material:more_vert[]. +
 → Ein Fenster öffnet sich.
@@ -1204,7 +1204,7 @@ Gehe wie im Folgenden beschrieben vor, um Vorlagen zu löschen. Nur die zusammen
 [.instruction]
 Vorlage löschen:
 
-. Öffne das Menü *CRM » EmailBuilder (Testphase)*.
+. Öffne das Menü *CRM » EmailBuilder*.
 . Klappe den Ordner auf (material:chevron_right[]), der die Vorlage enthält, die du löschen möchtest.
 . Klicke in der Zeile der Vorlage, die du löschen möchtest, auf material:more_vert[]. +
 → Ein Fenster öffnet sich.
@@ -1221,7 +1221,7 @@ Gehe wie im Folgenden beschrieben vor, um eine bestimmte Sprache aus der Vorlage
 [.instruction]
 Sprache aus der Vorlage entfernen:
 
-. Öffne das Menü *CRM » EmailBuilder (Testphase)*.
+. Öffne das Menü *CRM » EmailBuilder*.
 . Klappe den Ordner auf (material:chevron_right[]), der die Vorlage enthält, aus der du eine Sprache entfernen möchtest.
 . Klicke auf die Vorlage.
 . Wähle oben in den Tabs der Vorlage die Sprache, die du entfernen möchtest.
