--- a/docs/de-de/modules/crm/pages/messenger-testphase.adoc
+++ b/docs/de-de/modules/crm/pages/messenger-testphase.adoc
@@ -146,7 +146,7 @@ Außerdem wählst du in diesem Schritt eine E-Mail-Vorlage für den E-Mail-Versa
 [TIP]
 .Nutze die Standardvorlage *Messenger default*
 ====
-Wir empfehlen, die Standardvorlage *Messenger default* für den Messenger zu verwenden. Diese Vorlage ist bereits in deinem System im Menü *CRM » EmailBuilder (Testphase)* im Ordner *Standardvorlagen* vorhanden. Du kannst diese Vorlage nach deinen Wünschen anpassen.
+Wir empfehlen, die Standardvorlage *Messenger default* für den Messenger zu verwenden. Diese Vorlage ist bereits in deinem System im Menü *CRM » EmailBuilder* im Ordner *Standardvorlagen* vorhanden. Du kannst diese Vorlage nach deinen Wünschen anpassen.
 
 Die Vorlage enthält die folgenden Variablen:
 
@@ -161,7 +161,7 @@ Die Vorlage enthält die folgenden Variablen:
 
 // TODO: was passiert nun mit den Variablen im EmailBuilder? Was enthält nun die default template "Messenger default"?
 
-Wenn du in diesem Schritt _nicht_ die Standardvorlage für den Messenger, sondern eine eigene E-Mail-Vorlage verwenden möchtest, stelle sicher, dass die E-Mail-Vorlage, die du im Menü *CRM » EmailBuilder (Testphase)* erstellst, mindestens die folgenden Variablen enthält:
+Wenn du in diesem Schritt _nicht_ die Standardvorlage für den Messenger, sondern eine eigene E-Mail-Vorlage verwenden möchtest, stelle sicher, dass die E-Mail-Vorlage, die du im Menü *CRM » EmailBuilder* erstellst, mindestens die folgenden Variablen enthält:
 
 * Betreff der Nachricht 
 ** Gib im Betreff der Vorlage `{{ messenger.title }}` ein.
@@ -208,7 +208,7 @@ Wenn du den Dienst zum Sammeln der E-Mails aktivierst, werden die E-Mails aus de
 * Aufträge » Aufträge (Testphase)
 * Gruppenfunktion im Auftrag
 
-Den Assistenten *E-Mail-Konten* findest du ebenfalls im Menü *Einrichtung » Assistenten » Grundeinrichtung*. Weitere Informationen zum Sammeln der E-Mails findest du auf der Seite xref:crm:emailbuilder.adoc#[EmailBuilder (Testphase)] im Kapitel xref:crm:emailbuilder.adoc#e-mail-messenger-integration[Messenger-Integration].
+Den Assistenten *E-Mail-Konten* findest du ebenfalls im Menü *Einrichtung » Assistenten » Grundeinrichtung*. Weitere Informationen zum Sammeln der E-Mails findest du auf der Seite xref:crm:emailbuilder.adoc#[EmailBuilder] im Kapitel xref:crm:emailbuilder.adoc#e-mail-messenger-integration[Messenger-Integration].
 
 [#nachricht-erstellen]
 == Neue Nachricht erstellen
