ADD practical example for item list, CHANGE item list reference material because only one id can be entered

--- a/docs/en-gb/modules/online-store/pages/shop-builder.adoc
+++ b/docs/en-gb/modules/online-store/pages/shop-builder.adoc
@@ -1404,7 +1404,7 @@ This widget provides item lists. Click *Edit* icon:cog[role="darkGrey"] to open 
 
 *Category items* = Select this option to generate a list consisting of items of a single category. If this option is active, the additional field *category* is displayed in the widget settings. Clicking this field opens the *category picker*. Select the desired category and *confirm* the selection at the lower end of the +
 *Last seen* = Create a list of the items that a user visited recently. +
-*Items with tags* = Select this option to generate a list of items with specific tags. The input field *tags* is displayed below the current input field. If you want to enter multiple tag IDs, make sure that they are separated by commas. +
+*Items with tags* = Select this option to generate a list of items with a specific tag. The input field *tags* is displayed below the current input field. Enter the tag ID. +
 *Manufacturers* = Select this option to generate a list of items that share a manufacturer. If you select this option, you can pick the manufacturer in the *manufacturer* field. +
 
 | *Item sorting*
