Added chapter about deletion of items

--- a/docs/de-de/modules/maerkte/pages/idealo-einrichten.adoc
+++ b/docs/de-de/modules/maerkte/pages/idealo-einrichten.adoc
@@ -764,7 +764,7 @@ Die Zahlungsarten werden gemäß der Formateinstellung *Versandkosten* in einer 
 
 Varianten werden bei idealo gelöscht und können nicht mehr auf dem Marktplatz gekauft werden, wenn sie in plentymarkets keinen Bestand mehr haben. Dies passiert automatisch, denn Bestandsdaten werden alle 15 Minuten zu idealo übertragen. Wenn die Variante in deinem plentymarkets System wieder Bestand hat, wird sie mit der nächsten Bestandsübertragung also auch wieder auf idealo zum Verkauf angeboten.
 
-Wenn du eine Variante, die in plentymarkets Bestand hat, aber nicht mehr auf idealo verkaufen möchtest, musst du an der Variante die Verfügbarkeit für den Marktplatz entfernen.
+Wenn du eine Variante, die in plentymarkets Bestand hat, nicht mehr auf idealo verkaufen möchtest, musst du an der Variante die Verfügbarkeit für den Marktplatz entfernen.
 
 [.instruction]
 Verfügbarkeit entfernen:
