--- a/docs/de-de/modules/maerkte/pages/zalando.adoc
+++ b/docs/de-de/modules/maerkte/pages/zalando.adoc
@@ -686,6 +686,28 @@ _und/oder_
 NOTE: Pro Attribut kann nur ein Größenregister oder ein Längenregister verknüpft werden.
 |===
 
+[#artikel-loeschen]
+== Artikel bei Zalando löschen
+
+Varianten werden bei Zalando gelöscht und können nicht mehr auf dem Marktplatz gekauft werden, wenn sie in plentymarkets keinen Bestand mehr haben. Dies passiert automatisch, denn Bestandsdaten werden alle 15 Minuten zu Zalando übertragen. Wenn die Variante in deinem plentymarkets System wieder Bestand hat, wird sie mit der nächsten Bestandsübertragung also auch wieder auf Zalando zum Verkauf angeboten.
+
+Wenn du eine Variante, die in plentymarkets Bestand hat, nicht mehr auf Zalando verkaufen möchtest, musst du an der Variante die Verfügbarkeit für den Marktplatz entfernen.
+
+[.instruction]
+Verfügbarkeit entfernen:
+
+. Öffne das Menü *Artikel » Artikel bearbeiten » [Artikel öffnen] » [Variante öffnen] » Varianten-Tab: Verfügbarkeit*.
+. *Lösche* (icon:minus-circle[role="red"]) die Verfügbarkeiten *Zalando* und die Verfügbarkeit des Zalando-Marktplatzes, auf dem die Variante nicht mehr verkauft werden soll, zum Beispiel *Zalando DE*.
+. *Speichere* (terra:save[]) die Einstellungen. +
+→ Die Variante wird in den nächsten 15 Minuten bei Zalando gelöscht und kann dort nicht mehr gekauft werden.
+
+[TIP]
+.Zeitstempel für Marktplatzexporte aktualisieren
+====
+Wenn du sicherstellen möchtest, dass die Variante sofort bei Zalando gelöscht wird, kannst du zusätzlich mit der *Artikel-Gruppenfunktion* den *Zeitstempel für Marktplatzexporte aktualisieren*. +
+Öffne dazu das Menü *Artikel » Artikel bearbeiten » Tab: Artikel-Gruppenfunktion*. Setze ein Häkchen bei *Zeitstempel für Marktplatzexporte aktualisieren* und klicke auf terra:execute[] *Ausführen*. Die Variante wurde gelöscht und kann nun nicht mehr auf Zalando gekauft werden.
+====
+
 [#order-documents]
 == Auftragsdokumente vorbereiten
 
