Edited chapter for Zalando

--- a/docs/en-gb/modules/markets/pages/idealo-setup.adoc
+++ b/docs/en-gb/modules/markets/pages/idealo-setup.adoc
@@ -764,7 +764,7 @@ All payment methods will be exported according to the format setting *Shipping c
 [#idealo-delete-items]
 == Deleting items on idealo
 
-If a varation is out of stock in plentymarkets, it is deleted on idealo and cannot be bought on the market any longer. As stock data is transferred to idealo every 15 minutes, variations without stock are deleted automatically. If a variation has stock again in plentymarkets, it is offered again on idealo with the next stock export.
+If a variation is out of stock in plentymarkets, it is deleted on idealo and cannot be bought on the market any longer. As stock data is transferred to idealo every 15 minutes, variations without stock are deleted automatically. If a variation has stock again in plentymarkets, it is offered again on idealo with the next stock export.
 
 However, if you do not want to sell a variation on idealo any longer which still has stock in plentymarkets, you have to delete the availability for idealo.
 
