--- a/docs/en-gb/modules/markets/pages/zalando.adoc
+++ b/docs/en-gb/modules/markets/pages/zalando.adoc
@@ -686,6 +686,33 @@ _and/or_
 NOTE: You can only link one size register or one length register to each attribute.
 |===
 
+[#removing-items]
+== No longer offering items on Zalando
+
+Variations cannot be sold on Zalando if they do not have stock in plentymarkets. As stock data is transferred to Zalando every 15 minutes, variations without stock are deleted automatically. If a variation has stock again in plentymarkets, it is offered again on Zalando with the next stock export.
+
+If you do not want to sell a variation which is in stock in plentymarkets on Zalando, then you have to delete the availability for the market and update the timestamp for market exports.
+
+*_Note:_* Items cannot be deleted on Zalando. Thus, if you remove the availability and update the timestamp for market exports, your variation will not be deleted on Zalando. It will only be displayed as not in stock.
+
+[.instruction]
+Deleting the availability:
+
+. Go to *Item » Edit item » [Open item] » [Open variation] » Variation tab: Availability*.
+. *Delete* (icon:minus-circle[role="red"]) the availability *Zalando*.
+. *Save* (terra:save[]) the settings.
+
+After you removed the availability, you have to *Update the timestamp for market exports* using the *Item group function*. This ensures that a stock of *0* is transferred to Zalando.
+
+[.instruction]
+Updating the timestamp for market exports:
+
+. Go to *Item » Edit item » Tab: Item group function*.
+. Place a check mark next to *Update timestamp for market exports*.
+. Click on terra:execute[] *Execute*. +
+→ A stock of *0* is transferred to Zalando. +
+→ The variation is displayed as not in stock on Zalando and cannot be bought any longer.
+
 [#order-documents]
 == Preparing order documents
 
