Added chapter about deletion of items (#1323)
* Added chapter about deletion of items

* Edited chapter for Zalando

* Adjusted chapter for deletion of items

* Added translation

--- a/docs/de-de/modules/maerkte/pages/zalando.adoc
+++ b/docs/de-de/modules/maerkte/pages/zalando.adoc
@@ -686,6 +686,33 @@ _und/oder_
 NOTE: Pro Attribut kann nur ein Größenregister oder ein Längenregister verknüpft werden.
 |===
 
+[#artikel-entfernen]
+== Artikel nicht mehr auf Zalando verkaufen
+
+Varianten können nicht mehr auf Zalando gekauft werden, wenn sie in plentymarkets keinen Bestand mehr haben. Dies passiert automatisch, denn Bestandsdaten werden alle 15 Minuten zu Zalando übertragen. Wenn die Variante in deinem plentymarkets System wieder Bestand hat, wird sie mit der nächsten Bestandsübertragung also auch wieder auf Zalando zum Verkauf angeboten.
+
+Wenn du eine Variante, die in plentymarkets Bestand hat, nicht mehr auf Zalando verkaufen möchtest, musst du an der Variante die Verfügbarkeit für den Marktplatz entfernen und den Zeitstempel für Marktplatzexporte aktualisieren.
+
+*_Hinweis:_* Auf Zalando können Artikel nicht gelöscht werden. Wenn du die Verfügbarkeit entfernst und den Zeitstempel für Marktplatzexporte aktualisierst, wird deine Variante auf Zalando also nicht gelöscht, sondern lediglich als nicht mehr auf Lager angezeigt.
+
+[.instruction]
+Verfügbarkeit entfernen:
+
+. Öffne das Menü *Artikel » Artikel bearbeiten » [Artikel öffnen] » [Variante öffnen] » Varianten-Tab: Verfügbarkeit*.
+. *Lösche* (icon:minus-circle[role="red"]) die Verfügbarkeit *Zalando*.
+. *Speichere* (terra:save[]) die Einstellungen.
+
+Nachdem du die Verfügbarkeit entfernt hast, musst du über die *Artikel-Gruppenfunktion* den *Zeitstempel für Marktplatzexporte aktualisieren*, damit der Bestand *0* an Zalando übertragen wird.
+
+[.instruction]
+Zeitstempel für Marktplatzexporte aktualisieren:
+
+. Öffne das Menü *Artikel » Artikel bearbeiten » Tab: Artikel-Gruppenfunktion*.
+. Setze ein Häkchen bei *Zeitstempel für Marktplatzexporte aktualisieren*.
+. Klicke auf terra:execute[] *Ausführen*. +
+→ Der Bestand *0* wird an Zalando übertragen. +
+→ Die Variante wird auf Zalando als momentan nicht auf Lager angezeigt und kann nicht mehr gekauft werden.
+
 [#order-documents]
 == Auftragsdokumente vorbereiten
 
