--- a/docs/de-de/modules/auftraege/pages/working-with-orders.adoc
+++ b/docs/de-de/modules/auftraege/pages/working-with-orders.adoc
@@ -120,6 +120,14 @@ Rechts in der Auftragsübersicht sind je nach Auftragstyp weitere Funktionen üb
 |material:warehouse[]
 |Zeigt den Warenbestand sowie eventuelle Nachbestellungen für das Lager der Auftragsposition an. Klappe die Zeilen aus (material:chevron_right[]), um weitere Informationen zum Warenbestand zu sehen.
 
+| *Tracking-Link öffnen*
+|terra:shipment_tracking[]
+|Öffnet den Tracking-Link der Paketnummern.
+
+| *Auftrag im Versand-Center öffnen*
+|terra:outgoing_items[]
+|Öffnet den Auftrag im Versand-Center 2.0.
+
 | *Auftrag löschen*
 |material:delete[]
 |Ermöglicht das Löschen eines Auftrags. Beachte, dass Aufträge unter Umständen nicht gelöscht werden können.
@@ -320,8 +328,9 @@ Die Standardeinstellung für die Währung ist *Euro (EUR)*.
 |Gib ein Rückgabedatum ein oder wähle ein Datum über den Kalender (material:today[]).
 
 | *Paketnummern*
-|Gib eine Paketnummer ein. +
-Über *Versand-Center öffnen* (terra:outgoing_items[]) gelangst du direkt ins xref:fulfillment:versand-center-2-0.adoc#[Versand-Center 2.0].
+|Zeigt die Paketnummern kommasepariert an.
+Über *Tracking-Link öffnen* (terra:shipment_tracking[]) wird der Tracking-Link der Paketnummern geöffnet. +
+Über *Versand-Center öffnen* (terra:outgoing_items[]) wird der Auftrag im xref:fulfillment:versand-center-2-0.adoc#[Versand-Center 2.0] geöffnet.
 
 | *Mahnstufe*
 |Zeigt die Mahnstufe an. +
@@ -343,6 +352,30 @@ In der Dropdown-Liste kannst du zwischen *Keine* und *Stufe 1* bis *Stufe 4* wä
 |Zeigt die Paketnummern einer Retoure kommasepariert an. Dieses Feld ist nur für den Auftragstyp *Retoure* verfügbar. Mit Klick auf terra:order_return[] wirst du zum Versand-Center 2.0 weitergeleitet.
 
 |===
+
+==== Pakete via Tracking-Link verfolgen
+
+Über den an der Paketnummer hinterlegten Tracking-Link kannst du die Pakete deiner Aufträge verfolgen und somit sehen, wo sich deine Ware gerade befindet. Um Pakete zu verfolgen, gehe vor wie folgt.
+
+[.instruction]
+Pakete via Tracking-Link verfolgen:
+
+. Öffne das Menü *Aufträge » Aufträge (Testphase)*.
+. Führe die Suche (material:search[]) aus, um Aufträge anzuzeigen.
+. Klicke oben rechts auf *Spalten konfigurieren* (material:settings[]).
+. Wähle die Option *Tabelle Auftragsübersicht*.
+. Wähle (icon:check[]) die Spalte *Paketnummern*.
+. Klicke auf *Bestätigen*. +
+→ Die Spalte *Paketnummern* wird mit den kommaseparierten Paketnummern des Auftrags in der Auftragsübersicht angezeigt.
+. Klicke in der Zeile des Auftrags auf eine Paketnummer. +
+icon:map-signs[] *_Oder:_* Klicke in der Zeile des Auftrags auf das Kontextmenü (material:more_vert[]) und wähle die Option *Tracking-Link öffnen* (terra:shipment_tracking[]).
+→ Der Tracking-Link wird geöffnet.
+
+[TIP]
+.Tracking-Link bei mehreren Paketnummern splitten
+======
+Aktiviere im Menü *Einrichtung » Aufträge » Versand » Optionen* im Tab *Versanddienstleister* die Option *URLs splitten*, wenn ein Tracking-Link bei mehreren Paketnummern gesplittet werden soll. In diesem Fall wird für jede Paketnummer ein separater Link verwendet. Ist die Option nicht aktiviert, gibt es einen gemeinsamen Tracking-Link für alle Paketnummern.
+======
 
 [#area-addresses]
 === Bereich: Adressen
