--- a/docs/en-gb/modules/orders/pages/working-with-orders.adoc
+++ b/docs/en-gb/modules/orders/pages/working-with-orders.adoc
@@ -30,7 +30,7 @@ Using group functions:
 
 [TIP]
 .Select default group functions
-In the editing mode (terra:design_inline_edit[role="darkGrey"]) of the order overview you can determine *default group functions* that become directly visible when selecting orders. All remaining group functions will automatically be added to the context menu (material:more_vert[]).
+In the editing mode (terra:design_inline_edit[role="darkGrey"]) of the order overview, you can determine *default group functions* that become directly visible when selecting orders. All remaining group functions will automatically be added to the context menu (material:more_vert[]).
 
 [[table-order-group-functions]]
 .Group functions for orders
@@ -81,7 +81,7 @@ In the editing mode (terra:design_inline_edit[role="darkGrey"]) of the order ove
 
 | *Create document*
 |material:note_add[]
-|Creates a document for all selected orders. Select a document type from the drop-down list and enter a creation date for the document or select a date from the calendar (material:today[]).
+|Creates a document for all selected orders. Select a document type from the drop-down list. Enter a creation date for the document or select a date from the calendar (material:today[]).
 
 |===
 
@@ -119,6 +119,14 @@ On the right-hand side of the order overview, further functions are available. T
 | *Show stock*
 |material:warehouse[]
 |Shows the stock and possible reorders for the order item's warehouse. Expand (material:chevron_right) the columns to see further information on the stock.
+
+| *Open tracking link*
+|terra:shipment_tracking[]
+|Opens the tracking link of the package numbers.
+
+| *Open order in shipping centre*
+|terra:outgoing_items[]
+|Opens the order in the shipping centre 2.0.
 
 | *Delete order*
 |material:delete[]
@@ -320,8 +328,9 @@ The default setting for the currency is *Euro (EUR)*.
 |Enter a return date or select a date via the calendar (material:today[]).
 
 | *Package numbers*
-|Enter a package number. +
-You can access the xref:fulfilment:shipping-centre-2-0.adoc#[shipping centre 2.0] by clicking on *Open Shipping Centre* (terra:outgoing_items[]).
+|Shows the package numbers separated by comma.
+By clicking on *Open tracking link* (terra:shipment_tracking[]), the tracking link of the package numbers opens. +
+By clicking on *Open shipping centre* (terra:outgoing_items[]), the order is opened in the xref:fulfilment:shipping-centre-2-0.adoc#[shipping centre 2.0].
 
 | *Dunning level*
 |Shows the dunning level. +
@@ -343,6 +352,30 @@ You can select from *None* and *Level 1* to *Level 4* from the drop-down list.
 |Shows the package numbers of a return separated by comma. This field is only available for the order type *Return*. By clicking on terra:order_return[] you are redirected to the Shipping Centre 2.0.
 
 |===
+
+==== Tracking packages via tracking link
+
+Via the tracking link on the package number, you can track the packages of your orders and thus see where your items are at the moment. To track packages, proceed as follows.
+
+[.instruction]
+Tracking packages via tracking link:
+
+. Go to *Orders » Orders (Test phase)*.
+. Carry out the search (material:search[]) to display orders.
+. At the top right, click on *Configure columns* (material:settings[]).
+. Select the option *Order overview table*.
+. Select (icon:check[]) the *Package numbers* column.
+. Click on *Confirm*. +
+→ The *Package numbers* column is shown in the order overview and displays the package numbers separated by comma.
+. In the line of the order, click on a package number. +
+icon:map-signs[] *_Or:_* In the line of the order, click on the context menu (material:more_vert[]) and select the option *Open tracking link* (terra:shipment_tracking[]).
+→ The tracking link opens.
+
+[TIP]
+.Split tracking link for several package numbers
+======
+Open the *Shipping service provider* tab in the *Setup » Orders » Shipping » Settings* menu and activate the option *Split URLs* to split a tracking link for several package numbers. In this case, a separate link is used for each package number. If the option is not activated, there is only one tracking link for all package numbers.
+======
 
 [#area-addresses]
 === Area: Addresses
