--- a/docs/en-gb/modules/crm/pages/messenger-testphase.adoc
+++ b/docs/en-gb/modules/crm/pages/messenger-testphase.adoc
@@ -130,7 +130,7 @@ Select also in this step an email template for the email despatch.
 [IMPORTANT]
 .Live mode has to be activated in *Email accounts* assistant
 ====
-In the *Email accounts* assistant in the xref:crm/:mailbuilder.adoc#email-server-login-details[Login details] step, the option *Activate live mode* in the area *Would you like to activate the live mode?* has to be activated (material:check_box[role=skyBlue]). This ensures that the test mode will be deactivated and all emails will be sent to the corresponding recipients. 
+In the *Email accounts* assistant in the xref:crm:emailbuilder.adoc#email-server-login-details[Login details] step, the option *Activate live mode* in the area *Would you like to activate the live mode?* has to be activated (material:check_box[role=skyBlue]). This ensures that the test mode will be deactivated and all emails will be sent to the corresponding recipients. 
 
 Activating the live mode applies globally for the entire email despatch in plentymarkets. Thus, it also applies for the email despatch via the messenger. 
 ====
